[metadata]
name = iri90
version = 1.1.1
description = IRI90 from Python, clean and flexible ionospheric model.
author = Michael Hirsch, Ph.D.
url = https://github.com/space-physics/iri90
keywords =
  ionosphere
  thermosphere
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
install_requires =
  numpy
  xarray

[options.extras_require]
tests =
  pytest
  flake8
  mypy
plot =
  matplotlib
